--- a/ruoyi-ui/.env.development
+++ b/ruoyi-ui/.env.development
@@ -1,11 +1,12 @@
 # 页面标题
-VUE_APP_TITLE = 及速贷管理系统
+VUE_APP_TITLE = 七猫贷款花管理系统
 
 # 开发环境配置
 ENV = 'development'
 
-# 及速贷管理系统/开发环境
-VUE_APP_BASE_API = '/dev-api'
+# 七猫贷款花管理系统/开发环境
+#VUE_APP_BASE_API = 'http://106.75.157.66:8036'
+VUE_APP_BASE_API = 'http://127.0.0.1:8080'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
