--- a/ruoyi-ui/.env.production
+++ b/ruoyi-ui/.env.production
@@ -1,8 +1,9 @@
 # 页面标题
-VUE_APP_TITLE = 及速贷管理系统
+VUE_APP_TITLE = 七猫贷款花管理系统
 
 # 生产环境配置
 ENV = 'production'
 
-# 及速贷管理系统/生产环境
-VUE_APP_BASE_API = '/prod-api'
+# 七猫贷款花管理系统/生产环境
+#VUE_APP_BASE_API = 'http://106.75.157.66:8036'
+VUE_APP_BASE_API = 'http://127.0.0.1:8080'
