--- a/ruoyi-ui/.env.staging
+++ b/ruoyi-ui/.env.staging
@@ -1,10 +1,11 @@
 # 页面标题
-VUE_APP_TITLE = 及速贷管理系统
+VUE_APP_TITLE = 七猫贷款花管理系统
 
 NODE_ENV = production
 
 # 测试环境配置
 ENV = 'staging'
 
-# 及速贷管理系统/测试环境
-VUE_APP_BASE_API = '/stage-api'
+# 七猫贷款花管理系统/测试环境
+# VUE_APP_BASE_API = 'http://106.75.157.66:8036'
+VUE_APP_BASE_API = 'http://127.0.0.1:8080'
