--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -1,13 +1,12 @@
 {
   "name": "ruoyi",
   "version": "3.8.2",
-  "description": "及速贷管理系统",
-  "author": "及速贷",
+  "description": "七猫贷款花管理系统",
+  "author": "七猫贷款花",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
-    "build:dev": "vue-cli-service build --model development",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src"
@@ -41,7 +40,7 @@
     "axios": "0.24.0",
     "clipboard": "2.0.8",
     "core-js": "3.19.1",
-    "echarts": "4.9.0",
+    "echarts": "^4.9.0",
     "element-ui": "2.15.6",
     "file-saver": "2.0.5",
     "fuse.js": "6.4.3",
